[package]
name = "bins"
version = "2.0.0"
description = "A tool for pasting from the terminal"
authors = ["Kyle Clemens <bins@kyleclemens.com>"]
repository = "https://github.com/jkcclemens/bins"
readme = "README.md"
license = "MPL-2.0"

build = "build.rs"

[features]
default = ["file_type_checking"]
file_type_checking = ["magic"]

[dependencies]
toml = "0.3"
clap = "2.21"
hyper = "0.10"
hyper-openssl = "0.2"
# rand = "0.3"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
# error-chain = "0.10"
# linked-hash-map = "0.4"
# lazy_static = "0.2"
# cfg-if = "0.1"
url = "1.4"
flate2 = "0.2"
log = "0.3"
# crossbeam = "0.2"
time = "0.1"
scoped_threadpool = "0.1"
num_cpus = "1.3"
magic = { version = "0.12", optional = true }
# libc = { version = "0.2", optional = true }
# clipboard = { version = "0.2.0", optional = true }

[build-dependencies]
git2 = "0.6"
rustc_version = "0.2"
time = "0.1"

[profile.release]
lto = true
panic = "abort"
