[package]
name = "bins"
version = "2.0.0"
description = "A tool for pasting from the terminal"
authors = ["Kyle Clemens <bins@kyleclemens.com>"]
repository = "https://github.com/jkcclemens/bins"
readme = "README.md"
license = "MPL-2.0"

build = "build.rs"

[features]
default = ["file_type_checking"]
file_type_checking = ["magic"]
clipboard_support = ["clipboard"]

[dependencies]
toml = "0.4"
clap = "2.23"
hyper = "0.10"
hyper-openssl = "0.2"
rand = "0.3"
base64 = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "1.4"
flate2 = "0.2"
log = "0.3"
time = "0.1"
scoped_threadpool = "0.1"
num_cpus = "1.3"
magic = { version = "0.12", optional = true }
clipboard = { git = "https://github.com/aweinstock314/rust-clipboard.git", optional = true }

[build-dependencies]
git2 = "0.6"
rustc_version = "0.2"
time = "0.1"
clap = "2.9"

[profile.release]
lto = true
panic = "abort"
